--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -25,4 +25,8 @@ jobs:
     - name: docker push
       run: docker push ${{secrets.DOCKER_USER}}/nfsd
     - name: docker push readme
-      run: docker pushrm ${{secrets.DOCKER_USER}}/nfsd
+      uses: peter-evans/dockerhub-description@v3
+      with:
+        username: ${{ secrets.DOCKER_USER }}
+        password: ${{ secrets.DOCKER_PASSWORD }}
+        repository: ${{secrets.DOCKER_USER}}/nfsd
